# mathlib-requirements

./: .gitignore  README.md
libs/newlib/: Makefile  Makefile.am  Makefile.in  configure  configure.in
libs/newlib/libm/common/: Makefile  Makefile.am  Makefile.in  fdlibm.h
libs/newlib/libm/math/: Makefile  Makefile.am  Makefile.in
requirements/: LICENCE.txt  Makefile  mathlib-requirements.tgz  verifier_error.c
requirements/double_acos/: req_bl_0460.c  req_bl_0470.c  req_bl_0480.c  req_bl_0490a.c  req_bl_0490b.c
requirements/double_asin/: req_bl_0250a.c  req_bl_0250b.c  req_bl_0260.c  req_bl_0270.c  req_bl_0281.c
requirements/double_atan/: req_bl_0610.c  req_bl_0620.c  req_bl_0621a.c  req_bl_0621b.c
requirements/double_atan2/: req_bl_0660a.c  req_bl_0660b.c  req_bl_0661a.c  req_bl_0661b.c  req_bl_0662a.c  req_bl_0662b.c  req_bl_0663a.c  req_bl_0663b.c  req_bl_0670.c  req_bl_0680a.c  req_bl_0680b.c  req_bl_0681a.c  req_bl_0681b.c  req_bl_0682a.c  req_bl_0682b.c  req_bl_0683a.c  req_bl_0683b.c  req_bl_0684a.c  req_bl_0684b.c  req_bl_0685a.c  req_bl_0685b.c  req_bl_0686a.c  req_bl_0686b.c
requirements/double_ceil/: req_bl_1091.c  req_bl_1092a.c  req_bl_1092b.c  req_bl_1092c.c  req_bl_1092d.c
requirements/double_copysign/: req_bl_1381.c
requirements/double_cos/: req_bl_0310.c  req_bl_0320.c  req_bl_0330a.c  req_bl_0330b.c
requirements/double_exp/: req_bl_0831.c  req_bl_0832.c  req_bl_0833.c  req_bl_0834.c
requirements/double_fabs/: req_bl_1010.c  req_bl_1011.c  req_bl_1012a.c  req_bl_1012b.c
requirements/double_finite/: req_bl_1300.c
requirements/double_floor/: req_bl_1051.c  req_bl_1052.c
requirements/double_fmax/: req_bl_1240.c  req_bl_1250.c  req_bl_1251a.c  req_bl_1251b.c  req_bl_1252a.c  req_bl_1252b.c
requirements/double_fmin/: req_bl_1230.c  req_bl_1231a.c  req_bl_1231b.c  req_bl_1232a.c  req_bl_1232b.c
requirements/double_fmod/: req_bl_1121.c  req_bl_1122a.c  req_bl_1122b.c  req_bl_1130.c  req_bl_1131.c
requirements/double_hypot/: req_bl_1260.c  req_bl_1270.c  req_bl_1271.c
requirements/double_log/: req_bl_0910.c  req_bl_0920a.c  req_bl_0920b.c  req_bl_0921.c  req_bl_0930.c  req_bl_0931.c
requirements/double_log10/: req_bl_0960.c  req_bl_0970a.c  req_bl_0970b.c  req_bl_0971.c  req_bl_0981.c  req_bl_1280.c
requirements/double_modf/: req_bl_1210.c  req_bl_1211a.c  req_bl_1211b.c
requirements/double_pow/: double_pow.h  req_bl_0860.c  req_bl_0864a.c  req_bl_0864b.c  req_bl_0864c.c  req_bl_0870a.c  req_bl_0871.c  req_bl_0872.c  req_bl_0873.c  req_bl_0874.c  req_bl_0875.c  req_bl_0876.c  req_bl_0877.c  req_bl_0878.c  req_bl_0879.c  req_bl_0880.c  req_bl_0881.c  req_bl_0882.c  req_bl_0883.c  req_bl_0885a.c  req_bl_0885b.c  req_bl_0886.c
requirements/double_round/: req_bl_1031.c  req_bl_1032.c
requirements/double_sin/: req_bl_0210.c  req_bl_0220.c  req_bl_0240a.c  (+1 more)
(+1190 files in other folders)
